tests-integration/fixtures/checking/215_do_bind_error/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
pure :: forall (a :: Type). (a :: Type) -> Effect (a :: Type)
bind ::
  forall (a :: Type) (b :: Type).
    Effect (a :: Type) -> ((a :: Type) -> Effect (b :: Type)) -> Effect (b :: Type)
discard ::
  forall (a :: Type) (b :: Type).
    Effect (a :: Type) -> ((a :: Type) -> Effect (b :: Type)) -> Effect (b :: Type)
add :: Int -> Int -> Int
test :: Effect Int

Types
Effect :: Type -> Type

Roles
Effect = [Nominal]

Diagnostics
error[CannotUnify]: Cannot unify 'String' with 'Int'
  --> 14:15..14:16
   |
14 |   pure (add a b)
   |               ^
